dzc/pkg/parser/dz_parser.go
// Code generated from /home/denis/Documents/iu7-project-compilers/dzc/DZ.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // DZ

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'pkg'", "'type'", "'for'", "'while'", "'loop'", "'if'", "'elif'",
	"'else'", "'proc'", "'func'", "'const'", "'let'", "'mut'", "'struct'",
	"'enum'", "'union'", "'return'", "'i8_t'", "'u8_t'", "'i16_t'", "'u16_t'",
	"'i32_t'", "'u32_t'", "'i64_t'", "'u64_t'", "'char_t'", "'bool_t'", "'size_t'",
	"'ssize_t'", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "','", "';'",
	"'+'", "'-'", "'*'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", "'^'",
	"'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'<<='", "'>>='", "'&='",
	"'|='", "'^='", "'@'", "", "", "", "", "", "'true'", "'false'",
}
var symbolicNames = []string{
	"", "KW_PKG", "KW_TYPE", "KW_FOR", "KW_WHILE", "KW_LOOP", "KW_IF", "KW_ELIF",
	"KW_ELSE", "KW_PROC", "KW_FUNC", "KW_CONST", "KW_LET", "KW_MUT", "KW_STRUCT",
	"KW_ENUM", "KW_UNION", "KW_RETURN", "I8_T", "U8_T", "I16_T", "U16_T", "I32_T",
	"U32_T", "I64_T", "U64_T", "CHAR_T", "BOOL_T", "SIZE_T", "SSIZE_T", "LEFT_PRT",
	"RIGHT_PRT", "LEFT_BRC", "RIGHT_BRC", "LEFT_BRK", "RIGHT_BRK", "COLON",
	"COMMA", "SEMICOLON", "ADD", "SUB", "MUL", "DIV", "MOD", "SHL", "SHR",
	"AND", "OR", "XOR", "ASGN", "ADD_ASGN", "SUB_ASGN", "MUL_ASGN", "DIV_ASGN",
	"MOD_ASGN", "SHL_ASGN", "SHR_ASGN", "AND_ASGN", "OR_ASGN", "XOR_ASGN",
	"REF", "CONST", "TYPE", "IDENTIFIER", "INT_CONST", "FLOAT_CONST", "TRUE",
	"FALSE", "WHITESPACE",
}

var ruleNames = []string{
	"start", "pkg", "decls", "decl", "subdecl", "procdecl", "funcdecl", "procheader",
	"funcheader", "args", "argdecls", "argdecl", "funcret", "complexdecl",
	"structdecl", "structattrs", "structattr", "enumdecl", "enumoptions", "enumoption",
	"uniondecl", "unionattrs", "unionattr", "constdecl", "constasgn", "intasgn",
	"floatasgn", "boolconst", "casgn", "typedecl", "block", "typespec", "simpletypespec",
	"basictypespec", "namedtypespec", "reftypespec", "arraytypespec", "sizespec",
	"statements", "statement", "assignment", "asgnop", "condition", "ifblock",
	"elseblocks", "elifblock", "elseblock", "loop", "trueloop", "expression",
	"retstatement", "procretstatement", "funcretstatement",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type DZParser struct {
	*antlr.BaseParser
}

func NewDZParser(input antlr.TokenStream) *DZParser {
	this := new(DZParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "DZ.g4"

	return this
}

// DZParser tokens.
const (
	DZParserEOF         = antlr.TokenEOF
	DZParserKW_PKG      = 1
	DZParserKW_TYPE     = 2
	DZParserKW_FOR      = 3
	DZParserKW_WHILE    = 4
	DZParserKW_LOOP     = 5
	DZParserKW_IF       = 6
	DZParserKW_ELIF     = 7
	DZParserKW_ELSE     = 8
	DZParserKW_PROC     = 9
	DZParserKW_FUNC     = 10
	DZParserKW_CONST    = 11
	DZParserKW_LET      = 12
	DZParserKW_MUT      = 13
	DZParserKW_STRUCT   = 14
	DZParserKW_ENUM     = 15
	DZParserKW_UNION    = 16
	DZParserKW_RETURN   = 17
	DZParserI8_T        = 18
	DZParserU8_T        = 19
	DZParserI16_T       = 20
	DZParserU16_T       = 21
	DZParserI32_T       = 22
	DZParserU32_T       = 23
	DZParserI64_T       = 24
	DZParserU64_T       = 25
	DZParserCHAR_T      = 26
	DZParserBOOL_T      = 27
	DZParserSIZE_T      = 28
	DZParserSSIZE_T     = 29
	DZParserLEFT_PRT    = 30
	DZParserRIGHT_PRT   = 31
	DZParserLEFT_BRC    = 32
	DZParserRIGHT_BRC   = 33
	DZParserLEFT_BRK    = 34
	DZParserRIGHT_BRK   = 35
	DZParserCOLON       = 36
	DZParserCOMMA       = 37
	DZParserSEMICOLON   = 38
	DZParserADD         = 39
	DZParserSUB         = 40
	DZParserMUL         = 41
	DZParserDIV         = 42
	DZParserMOD         = 43
	DZParserSHL         = 44
	DZParserSHR         = 45
	DZParserAND         = 46
	DZParserOR          = 47
	DZParserXOR         = 48
	DZParserASGN        = 49
	DZParserADD_ASGN    = 50
	DZParserSUB_ASGN    = 51
	DZParserMUL_ASGN    = 52
	DZParserDIV_ASGN    = 53
	DZParserMOD_ASGN    = 54
	DZParserSHL_ASGN    = 55
	DZParserSHR_ASGN    = 56
	DZParserAND_ASGN    = 57
	DZParserOR_ASGN     = 58
	DZParserXOR_ASGN    = 59
	DZParserREF         = 60
	DZParserCONST       = 61
	DZParserTYPE        = 62
	DZParserIDENTIFIER  = 63
	DZParserINT_CONST   = 64
	DZParserFLOAT_CONST = 65
	DZParserTRUE        = 66
	DZParserFALSE       = 67
	DZParserWHITESPACE  = 68
)

// DZParser rules.
const (
	DZParserRULE_start            = 0
	DZParserRULE_pkg              = 1
	DZParserRULE_decls            = 2
	DZParserRULE_decl             = 3
	DZParserRULE_subdecl          = 4
	DZParserRULE_procdecl         = 5
	DZParserRULE_funcdecl         = 6
	DZParserRULE_procheader       = 7
	DZParserRULE_funcheader       = 8
	DZParserRULE_args             = 9
	DZParserRULE_argdecls         = 10
	DZParserRULE_argdecl          = 11
	DZParserRULE_funcret          = 12
	DZParserRULE_complexdecl      = 13
	DZParserRULE_structdecl       = 14
	DZParserRULE_structattrs      = 15
	DZParserRULE_structattr       = 16
	DZParserRULE_enumdecl         = 17
	DZParserRULE_enumoptions      = 18
	DZParserRULE_enumoption       = 19
	DZParserRULE_uniondecl        = 20
	DZParserRULE_unionattrs       = 21
	DZParserRULE_unionattr        = 22
	DZParserRULE_constdecl        = 23
	DZParserRULE_constasgn        = 24
	DZParserRULE_intasgn          = 25
	DZParserRULE_floatasgn        = 26
	DZParserRULE_boolconst        = 27
	DZParserRULE_casgn            = 28
	DZParserRULE_typedecl         = 29
	DZParserRULE_block            = 30
	DZParserRULE_typespec         = 31
	DZParserRULE_simpletypespec   = 32
	DZParserRULE_basictypespec    = 33
	DZParserRULE_namedtypespec    = 34
	DZParserRULE_reftypespec      = 35
	DZParserRULE_arraytypespec    = 36
	DZParserRULE_sizespec         = 37
	DZParserRULE_statements       = 38
	DZParserRULE_statement        = 39
	DZParserRULE_assignment       = 40
	DZParserRULE_asgnop           = 41
	DZParserRULE_condition        = 42
	DZParserRULE_ifblock          = 43
	DZParserRULE_elseblocks       = 44
	DZParserRULE_elifblock        = 45
	DZParserRULE_elseblock        = 46
	DZParserRULE_loop             = 47
	DZParserRULE_trueloop         = 48
	DZParserRULE_expression       = 49
	DZParserRULE_retstatement     = 50
	DZParserRULE_procretstatement = 51
	DZParserRULE_funcretstatement = 52
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DZParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DZParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) Pkg() IPkgContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPkgContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPkgContext)
}

func (s *StartContext) Decls() IDeclsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclsContext)
}

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(DZParserEOF, 0)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.ExitStart(s)
	}
}

func (p *DZParser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DZParserRULE_start)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(106)
		p.Pkg()
	}
	{
		p.SetState(107)
		p.Decls()
	}
	{
		p.SetState(108)
		p.Match(DZParserEOF)
	}

	return localctx
}

// IPkgContext is an interface to support dynamic dispatch.
type IPkgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name token.
	GetName() antlr.Token

	// SetName sets the name token.
	SetName(antlr.Token)

	// IsPkgContext differentiates from other interfaces.
	IsPkgContext()
}

type PkgContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	name   antlr.Token
}

func NewEmptyPkgContext() *PkgContext {
	var p = new(PkgContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DZParserRULE_pkg
	return p
}

func (*PkgContext) IsPkgContext() {}

func NewPkgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PkgContext {
	var p = new(PkgContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DZParserRULE_pkg

	return p
}

func (s *PkgContext) GetParser() antlr.Parser { return s.parser }

func (s *PkgContext) GetName() antlr.Token { return s.name }

func (s *PkgContext) SetName(v antlr.Token) { s.name = v }

func (s *PkgContext) KW_PKG() antlr.TerminalNode {
	return s.GetToken(DZParserKW_PKG, 0)
}

func (s *PkgContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(DZParserSEMICOLON, 0)
}

func (s *PkgContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(DZParserIDENTIFIER, 0)
}

func (s *PkgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PkgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PkgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.EnterPkg(s)
	}
}

func (s *PkgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.ExitPkg(s)
	}
}

func (p *DZParser) Pkg() (localctx IPkgContext) {
	localctx = NewPkgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DZParserRULE_pkg)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(110)
		p.Match(DZParserKW_PKG)
	}
	{
		p.SetState(111)

		var _m = p.Match(DZParserIDENTIFIER)

		localctx.(*PkgContext).name = _m
	}
	{
		p.SetState(112)
		p.Match(DZParserSEMICOLON)
	}

	return localctx
}

// IDeclsContext is an interface to support dynamic dispatch.
type IDeclsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclsContext differentiates from other interfaces.
	IsDeclsContext()
}

type DeclsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclsContext() *DeclsContext {
	var p = new(DeclsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DZParserRULE_decls
	return p
}

func (*DeclsContext) IsDeclsContext() {}

func NewDeclsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclsContext {
	var p = new(DeclsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DZParserRULE_decls

	return p
}

func (s *DeclsContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclsContext) AllDecl() []IDeclContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDeclContext)(nil)).Elem())
	var tst = make([]IDeclContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDeclContext)
		}
	}

	return tst
}

func (s *DeclsContext) Decl(i int) IDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDeclContext)
}

func (s *DeclsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.EnterDecls(s)
	}
}

func (s *DeclsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.ExitDecls(s)
	}
}

func (p *DZParser) Decls() (localctx IDeclsContext) {
	localctx = NewDeclsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DZParserRULE_decls)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(117)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<DZParserKW_TYPE)|(1<<DZParserKW_PROC)|(1<<DZParserKW_FUNC)|(1<<DZParserKW_CONST)|(1<<DZParserKW_STRUCT)|(1<<DZParserKW_ENUM)|(1<<DZParserKW_UNION))) != 0 {
		{
			p.SetState(114)
			p.Decl()
		}

		p.SetState(119)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IDeclContext is an interface to support dynamic dispatch.
type IDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclContext differentiates from other interfaces.
	IsDeclContext()
}

type DeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclContext() *DeclContext {
	var p = new(DeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DZParserRULE_decl
	return p
}

func (*DeclContext) IsDeclContext() {}

func NewDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclContext {
	var p = new(DeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DZParserRULE_decl

	return p
}

func (s *DeclContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclContext) Subdecl() ISubdeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISubdeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISubdeclContext)
}

func (s *DeclContext) Complexdecl() IComplexdeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComplexdeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IComplexdeclContext)
}

func (s *DeclContext) Typedecl() ITypedeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypedeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypedeclContext)
}

func (s *DeclContext) Constdecl() IConstdeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConstdeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConstdeclContext)
}

func (s *DeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.EnterDecl(s)
	}
}

func (s *DeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.ExitDecl(s)
	}
}

func (p *DZParser) Decl() (localctx IDeclContext) {
	localctx = NewDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DZParserRULE_decl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(124)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case DZParserKW_PROC, DZParserKW_FUNC:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(120)
			p.Subdecl()
		}

	case DZParserKW_STRUCT, DZParserKW_ENUM, DZParserKW_UNION:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(121)
			p.Complexdecl()
		}

	case DZParserKW_TYPE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(122)
			p.Typedecl()
		}

	case DZParserKW_CONST:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(123)
			p.Constdecl()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// ISubdeclContext is an interface to support dynamic dispatch.
type ISubdeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSubdeclContext differentiates from other interfaces.
	IsSubdeclContext()
}

type SubdeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySubdeclContext() *SubdeclContext {
	var p = new(SubdeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DZParserRULE_subdecl
	return p
}

func (*SubdeclContext) IsSubdeclContext() {}

func NewSubdeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SubdeclContext {
	var p = new(SubdeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DZParserRULE_subdecl

	return p
}

func (s *SubdeclContext) GetParser() antlr.Parser { return s.parser }

func (s *SubdeclContext) Procdecl() IProcdeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IProcdeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IProcdeclContext)
}

func (s *SubdeclContext) Funcdecl() IFuncdeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncdeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncdeclContext)
}

func (s *SubdeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SubdeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SubdeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.EnterSubdecl(s)
	}
}

func (s *SubdeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.ExitSubdecl(s)
	}
}

func (p *DZParser) Subdecl() (localctx ISubdeclContext) {
	localctx = NewSubdeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, DZParserRULE_subdecl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(128)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case DZParserKW_PROC:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(126)
			p.Procdecl()
		}

	case DZParserKW_FUNC:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(127)
			p.Funcdecl()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IProcdeclContext is an interface to support dynamic dispatch.
type IProcdeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProcdeclContext differentiates from other interfaces.
	IsProcdeclContext()
}

type ProcdeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProcdeclContext() *ProcdeclContext {
	var p = new(ProcdeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DZParserRULE_procdecl
	return p
}

func (*ProcdeclContext) IsProcdeclContext() {}

func NewProcdeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProcdeclContext {
	var p = new(ProcdeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DZParserRULE_procdecl

	return p
}

func (s *ProcdeclContext) GetParser() antlr.Parser { return s.parser }

func (s *ProcdeclContext) KW_PROC() antlr.TerminalNode {
	return s.GetToken(DZParserKW_PROC, 0)
}

func (s *ProcdeclContext) Procheader() IProcheaderContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IProcheaderContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IProcheaderContext)
}

func (s *ProcdeclContext) Block() IBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBlockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ProcdeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProcdeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProcdeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.EnterProcdecl(s)
	}
}

func (s *ProcdeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DZListener); ok {
		listenerT.ExitProcdecl(s)
	}
}

func (p *DZParser) Procdecl() (localctx IProcdeclContext) {
	localctx = NewProcdeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, DZParserRULE_procdecl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(130)
		p.Match(DZParserKW_PROC)
	}
	{
		p.SetState(131)
		p.Procheader()
	}
	{
		p.SetState(132)
		p.Block()
	}

	return localctx
}

// IFuncdeclContext is an interface to support dynamic dispatch.
type IFuncdeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
